--- a/style.scss
+++ b/style.scss
@@ -8,9 +8,12 @@
     max-width: 100%;
 }
 body{
-    transition: all 0.3s ease;
+    transition: all 0.8s ease;
+    background-color: rgb(15, 15, 15);
 }
-
+.hidden{
+    overflow: hidden;
+}
 html{
     scroll-behavior: smooth;
 }
@@ -24,22 +27,27 @@ i{
     background-repeat: no-repeat;
     background-position-x: center;
     background-size: cover;
-    transition: all 0.5s ease;
+    transition: all 0.8s ease;
 }
 
 /* menu */
+.menu-hidden{
+    visibility: hidden;
+}
 .nav-menu{
     width: 100%;
     position: fixed;
     top: 0;
     padding: 10px;
-    display:block;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
     background-color:rgba(0,0,0,.5);
     z-index: 1000;
 
 /*contenedor de etiquetas li en el menu*/
     ul{
-        transition: all 0.3s ease;
+        transition: all 0.5s ease;
         position: fixed;
         top: 0;
         left: -110%;
@@ -47,7 +55,7 @@ i{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background-color: rgb(55, 55, 55);
+        background-color: rgb(15,15,15);
         color: white;
         height: 100%;
         padding: 10px;
@@ -56,6 +64,15 @@ i{
     i{
         font-size: 3rem;
         color: white;
+    }
+    span{
+        display: flex;
+        align-items: center;
+        color: white;
+        font-style: italic;
+        font-weight: bold;
+        font-size: 1rem;
+        cursor: pointer;
     }
 }
 .ul-content
@@ -67,10 +84,11 @@ i{
     margin: 20px 20px 20px 0;
     color:white;
     font-size: 1.3rem;
-    transition: all 0.5s ease;
+    transition: all 0.8s ease;
     &:hover{
         transform: translateY(-5%);
         color:#f8a100;
+        transition: all 0.4s ease;
         cursor: pointer;
         }
     }
@@ -95,8 +113,9 @@ i{
     cursor: pointer;
     display: flex;
     align-items: center;
+    margin: 5px;
     outline: none;
-
+    transition: all 0.9s ease;
     &::after{
         content: "";
         display: block;
@@ -108,15 +127,16 @@ i{
         left: 0;
         right: unset;
         border-radius: 100px;
-        transition:0.3s ease all;
+        transition:0.9s ease all;
         box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
     }
 
     &.active{
         background-color:#f89900;
         color: #0000;
-
+        transition: all 0.9s ease;
         &::after{
+            transition: all 0.5s ease;
             right: 0;
             left: unset;
         }
@@ -128,6 +148,7 @@ i{
         line-height: 30px;
         background:none;
         color:#fff;
+        transition: all 0.5s ease;
     }
     span i{
         font-size:15px;
@@ -153,6 +174,11 @@ i{
     font-size: 1rem;
     border:none;
     cursor: pointer;
+    transition: all 0.4s ease;
+    &:hover{
+        transition: all 0.4s ease;
+        filter: opacity(.7);
+    }
 }
 /*anchura del menu en pantallas mas chicas*/
 @media(max-width:732px){
@@ -224,7 +250,7 @@ i{
 }
 
 /*seccion 2*/
-.seccion2{
+.seccion3{
     min-height: 100vh;
     background-color: rgb(15, 15, 15);
     color: white;
@@ -261,19 +287,23 @@ i{
 }
 .project{
     margin: auto;
+    width: 90%;
     padding: 10px;
-    border-radius: 1rem;
     text-align: center;
     border-top-style: groove;
-    border-color: darkviolet;
+    border-color:darkviolet;
     .title-project{
-        padding: 20px;
+        padding: 25px;
         h1{
-            font-size: 4rem;
+            font-size: 2.7rem;
             color:gray;
         }
         span{
+            padding:15px;
             color:grey;
+        }
+        p{
+            padding: 15px;
         }
 
     }
@@ -283,15 +313,20 @@ i{
     flex-wrap: wrap;
     width: 100%;
     justify-content: space-around;
+    padding: 30px;
 }
 .github-btnproject{
-    width: 13rem;
-    margin: 3px;
+    width: 16rem;
+    line-height: 3rem;
+    border-radius: 2.7rem;
+    margin: 10px;
     background-color: rgba(48, 49, 48, 0.931);
 }
 .link-btnproject{
-    width: 13rem;
-    margin: 3px;
+    width: 16rem;
+    line-height: 3rem;
+    border-radius: 2.7rem;
+    margin: 10px;
     background-color: rgb(9, 226, 117);
 }
 .underline{
@@ -300,6 +335,7 @@ i{
 }
 /*light mode*/
 body.light{
+    background-color: #fff;
     //seccion 1
     ul{
         background-color: white;
@@ -311,7 +347,7 @@ body.light{
            color: black;
         }
     }
-    .seccion2{
+    .seccion3{
         background-color: white;
         .title-project{
             h1{
@@ -324,4 +360,114 @@ body.light{
             }
         }
     }
+}
+
+
+//seccion 3{
+
+
+
+    //loading
+@keyframes ldio-28yrnfdlbs7 {
+  0% { transform: rotate(0) }
+  100% { transform: rotate(360deg) }
+}
+.ldio-28yrnfdlbs7 div { box-sizing: border-box!important }
+.ldio-28yrnfdlbs7 > div {
+  position: absolute;
+  width: 144px;
+  height: 144px;
+  top: 28px;
+  left: 28px;
+  border-radius: 50%;
+  border: 16px solid #000;
+  border-color: #434040 transparent #434040 transparent;
+  animation: ldio-28yrnfdlbs7 1s linear infinite;
+}
+
+.ldio-28yrnfdlbs7 > div:nth-child(2), .ldio-28yrnfdlbs7 > div:nth-child(4) {
+  width: 108px;
+  height: 108px;
+  top: 46px;
+  left: 46px;
+  animation: ldio-28yrnfdlbs7 1s linear infinite reverse;
+}
+.ldio-28yrnfdlbs7 > div:nth-child(2) {
+  border-color: transparent #f89900 transparent #f89900
+}
+.ldio-28yrnfdlbs7 > div:nth-child(3) { border-color: transparent }
+.ldio-28yrnfdlbs7 > div:nth-child(3) div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: rotate(45deg);
+}
+.ldio-28yrnfdlbs7 > div:nth-child(3) div:before, .ldio-28yrnfdlbs7 > div:nth-child(3) div:after { 
+  content: "";
+  display: block;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: -16px;
+  left: 48px;
+  background: #434040;
+  border-radius: 50%;
+  box-shadow: 0 128px 0 0 #434040;
+}
+.ldio-28yrnfdlbs7 > div:nth-child(3) div:after {
+  left: -16px;
+  top: 48px;
+  box-shadow: 128px 0 0 0 #434040;
+}
+
+.ldio-28yrnfdlbs7 > div:nth-child(4) { border-color: transparent; }
+.ldio-28yrnfdlbs7 > div:nth-child(4) div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: rotate(45deg);
+}
+.ldio-28yrnfdlbs7 > div:nth-child(4) div:before, .ldio-28yrnfdlbs7 > div:nth-child(4) div:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: -16px;
+  left: 30px;
+  background: #f89900;
+  border-radius: 50%;
+  box-shadow: 0 92px 0 0 #f89900;
+}
+.ldio-28yrnfdlbs7 > div:nth-child(4) div:after {
+  left: -16px;
+  top: 30px;
+  box-shadow: 92px 0 0 0 #f89900;
+}
+.loadingio-spinner-double-ring-0h1e8tivh0fd {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+}
+.ldio-28yrnfdlbs7 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  background-color:rgba(0, 0, 0, 0);
+  transform-origin: 0 0; /* see note above */
+}
+.ldio-28yrnfdlbs7 div { box-sizing: content-box; }
+/* generated by https://loading.io/ */
+
+
+//div del loader
+.centrado{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgba(0,0,0,0);
 }
